# lingtai-kernel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
discussions/: library-manual-improvements-patch.md
docs/: bug-report-2026-03-22.md  intrinsics-draft.md
docs/plans/: 2026-04-05-kernel-relative-addressing.md  2026-04-28-imap-addon-hardening.md
src/lingtai/: __init__.py  __main__.py  agent.py  cli.py  config_resolve.py  init_schema.py  mcp_catalog.json  network.py  presets.py  venv_resolve.py
src/lingtai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_account.py  test_activate_preset.py  test_addon_feishu_account.py  test_addon_feishu_manager.py  test_addon_feishu_service.py  test_addon_imap_account.py  test_addon_imap_manager.py  test_addon_imap_migrate.py  test_addons.py  test_agent_capabilities.py  test_api_gate.py  test_avatar_preset_inheritance.py  test_avatar_rules.py  test_avatar_timezone_inheritance.py  test_base_agent.py  test_chat_interface_invariant.py  test_chat_interface_remove_pair_by_notif_id.py  test_check_caps.py  test_codex.py  test_compaction.py  test_context_md.py  test_daemon.py  test_daemon_check.py  test_daemon_preset_capabilities.py  test_daemon_run_dir.py  test_deep_refresh.py  test_deepseek_adapter.py  test_dismiss_session_hierarchy.py  test_eigen.py  test_filesystem_mail.py  test_handshake.py  test_heartbeat.py  test_i18n.py  test_inherit_fallback.py  test_init_schema.py  test_interface.py  test_kernel_migrate.py  test_layers_avatar.py  test_layers_bash.py  test_layers_email.py  (+44 more)
(+184 files in other folders)
