[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai-kernel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []
description = "Minimal agent kernel — think, communicate, remember, host tools"
license = "MIT"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lingtai_kernel = ["i18n/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
