[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai"
version = "0.5.9"
description = "Generic research agent with intrinsic tools and MCP-compatible extension interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "mcp>=1.0",
    "ddgs>=7.0",
    "trafilatura>=2.0",
]

[project.scripts]
lingtai = "lingtai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lingtai_kernel = ["i18n/*.json"]
lingtai = ["i18n/*.json", "capabilities/*.json", "addons/*/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
